Avl Tree implementation completed

--- a/AVL Tree/index.html
+++ b/AVL Tree/index.html
@@ -60,6 +60,7 @@
                     <button id="inOrderBtn" class="btn algo-btn">InOrder</button>
                     <button id="preOrderBtn" class="btn algo-btn">PreOrder</button>
                     <button id="postOrderBtn" class="btn algo-btn">PostOrder</button>
+                    <button id="levelOrderBtn" class="btn algo-btn">LevelOrder</button>
                 </div>
             </section>
 
